--- a/stylesheet.css
+++ b/stylesheet.css
@@ -74,6 +74,12 @@ header {
   height: 65px;
   width: 100%;
   background-color: rgba(34, 49, 52, 0.9);
+  /* Ubah position ke fixed, dan top ke 0 */
+  position: fixed;
+  top: 0;
+  
+  /* Ubah z-index ke 10 */
+  z-index: 10;
 }
 
 .logo {
@@ -106,8 +112,7 @@ header {
   height: 500px;
   padding-bottom: 80px;
   background-color: #f7f7f7;
-  /* Ubah property text-align ke center */
-  
+  text-align: center;
 }
 
 .heading {
@@ -125,12 +130,57 @@ header {
   width: 25%;
 }
 
-/* Tambahkan CSS untuk lesson-icon */
+.lesson-icon {
+  position: relative;
+}
 
+.lesson-icon p {
+  position: absolute;
+  top: 90px;
+  width: 100%;
+  color: white;
+}
 
-/* Tambahkan CSS untuk tag <p> didalam lesson-icon */
+.txt-contents {
+  width: 80%;
+  display: inline-block;
+  margin-top: 20px;
+  font-size: 15px;
+  color: #b3aeb5;
+}
 
+.heading h3 {
+  font-weight: normal;
+}
 
-/* Tambahkan CSS untuk txt-contents */
+.message-wrapper {
+  border-bottom: 1px solid #eee;
+  padding-bottom: 80px;
+  text-align: center;
+}
 
+.message {
+  padding: 15px 40px;
+  background-color: #5dca88;
+  cursor: pointer;
+  box-shadow: 0 7px #1a7940;
+}
 
+.message:active {
+  position: relative;
+  top: 7px;
+  box-shadow: none;
+}
+
+footer img {
+  width: 125px;
+}
+
+footer p {
+  color: #b3aeb5;
+  font-size: 12px;
+}
+
+footer {
+  padding-top: 30px;
+}
